--- a/Teams.html
+++ b/Teams.html
@@ -16,7 +16,7 @@ Title: Rugby Six Nations 2022 Main Page-->
         <h1>Guinness Six Nations 2022 Teams</h1>
     <nav>
         <ul>
-            <li><a href="RugbyMain.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="TeamFixtures.html">Match Fixtures & outcomes</a></li>
             <li><a href="Teams.html">Selected</a></li>
             <li><a href="TrophiesAndWinners.html">Trophies and winners</a></li>
