--- a/TeamFixtures.html
+++ b/TeamFixtures.html
@@ -16,7 +16,7 @@ Title: Rugby Six Nations 2022 Team Fixtures-->
         <h1>Guinness Six Nations 2022 Teams</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="RugbyMain.html">Home</a></li>
             <li><a href="TeamFixtures.html">Selected</a></li>
             <li><a href="Teams.html">Teams</a></li>
             <li><a href="TrophiesAndWinners.html">Trophies and winners</a></li>
@@ -25,8 +25,29 @@ Title: Rugby Six Nations 2022 Team Fixtures-->
     </header>
     <body>
         <main>
-            <h2>Coming Soon</h2>
-        </main>
+            <section>          
+            <h2>Map of the staduim where France won the tournment</h2>
+            <iframe src="https://maps.google.com/maps?q=%20the%20Stade%20de%20France&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"></iframe>
+            <p>It is here where the Six Nations 2022 ended with France Winning the tournment first time since 2010</p>
+        </section>
+        <section>
+            <a href="https://www.youtube.com/watch?v=pqmum0DQcsk">The winners lifting the trophy</a>
+        </section>
+        <section>
+        <H3>Contact Us</H3>
+        <form action="https:/foo.com" method="get"></form>
+        <label for="first_name">First Name: <span class="required">*</span></label>
+        <input type="text" name="first_name" id="first_name" autofocus required><br>
+        <label for="last_name">Last Name: <span class="required">*</span></label>
+        <input type="text" name="last_name" id="last_name" autofocus required><br>
+        <label for="email">Email: <span class="required">*</span></label>
+        <input type="email" name="email" id="email" autofocus required = FrancisUnderwood@example.com><br>
+        <label for="Reason">Why are you contacting us: </label>
+        <input type="radio" id="Reason" name="Reason" value="Donation">Donate
+        <input type="radio" id="Reason" name="Reason" value="Corrections">Correct an Error
+        <input type="radio" id="Reason" name="Reason" value="Other" >Other<br>
+    </section>
+        </main>    
     </body>
 
 </html>
