--- a/TrophiesAndWinners.html
+++ b/TrophiesAndWinners.html
@@ -16,8 +16,8 @@ Title: Rugby Six Nations 2022 Main Page-->
         <h1>Guinness Six Nations 2022</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="TeamFixtures.html">Match Fixtures & outcomes</a></li>
+                <li><a href="RugbyMain.html">Home</a></li>
+                <li><a href="TeamFixtures.html">Extra</a></li>
                 <li><a href="Teams.html">Teams</a></li>
                 <li><a href="TrophiesAndWinners.html">Selected</a></li>
             </ul>
@@ -60,7 +60,7 @@ Title: Rugby Six Nations 2022 Main Page-->
             <a href="#top">Go to Top</a>
         </p>
         <a href="RugbyMain.html">Home |</a>
-        <a href="TeamFixtures.html">Match Fixtures & outcomes |</a>
+        <a href="TeamFixtures.html">Extra |</a>
         <a href="Teams.html">Teams |</a>
         <a href="TrophiesAndWinners.html">Trophies and winners |</a>
         <p>&copy Adam Gleeson </p>
